--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -7,6 +7,7 @@
   --color-primary: #8257e5;
   --color-primary-dark: #774dd6;
   --color-primary-darker: #6842c2;
+  --color-primary-darkiest: #513397;
   --color-secundary: #04d361;
   --color-secundary-dark: #04bf58;
   --color-title-in-primary: #ffffff;
