--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -8,8 +8,8 @@
   --color-primary-dark: #774dd6;
   --color-primary-darker: #6842c2;
   --color-primary-darkiest: #513397;
-  --color-secundary: #04d361;
-  --color-secundary-dark: #04bf58;
+  --color-secondary: #04d361;
+  --color-secondary-dark: #04bf58;
   --color-title-in-primary: #ffffff;
   --color-text-in-primary: #d4c2ff;
   --color-text-title: #32264d;
